--- a/cleaning_review_v1.ipynb
+++ b/cleaning_review_v1.ipynb
@@ -1347,7 +1347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"archive/cleanded_bridge.csv\")"
+    "df.to_csv(\"archive/cleaned_bridge.csv\")"
    ]
   },
   {
@@ -1428,7 +1428,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2848,7 +2850,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2866,5 +2868,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
