Phrasing and grammar fixes

--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "qPSrKqv5BSmi"
       },
@@ -70,7 +70,7 @@
         "id": "SYMN0ZXMBe8G",
         "outputId": "7d654f42-6045-4f74-b4bd-8448050bbf70"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "0pFDcGOABSmj"
       },
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "id": "qVwbBYypBSmj"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -158,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -176,14 +176,14 @@
         }
       ],
       "source": [
-        "#temporarily exclude id from 50 to 60 and 80 to 84 because they are app and video\n",
+        "#exclude id from 50 to 60 and 80 to 84 because they are app and video\n",
         "genre_dict = {k: v for k, v in genre_dict.items() if k not in ['50', '51', '52', '53', '54', '55', '56', '57', '58', '59', '80', '81', '82', '83', '84']}\n",
         "print(genre_dict)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "id": "pf3VHYr3BSmk"
       },
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -639,7 +639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1084,7 +1084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1437,7 +1437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1473,7 +1473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "_VhzUc43BSml"
       },
@@ -1487,7 +1487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1651,7 +1651,7 @@
       "metadata": {
         "id": "Bs0MbRUHHguP"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1677,7 +1677,7 @@
         "id": "q1oCPhj7KOSr",
         "outputId": "c9fbb31e-2746-41c4-bfbd-266a2a595fe5"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1717,7 +1717,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **2. How many genres and what is the genres distribution on Steam?**"
+        "#### **2. How many genres and what is the genre distribution on Steam?**"
       ],
       "metadata": {
         "id": "2K13tiXgPgLh"
@@ -1727,8 +1727,8 @@
       "cell_type": "markdown",
       "source": [
         "* Visualize the genres and its distribution\n",
-        "* For developers, answering this question will help them decide between following the popular genres or following niche genres(genres that doesn't have many game)\n",
-        "* For gamers, answering this question can help them know how many choices they have for each genres and help them find new genres"
+        "* For developers, answering this question will help them decide between following the popular genres or following niche genres(genres that don't have many games)\n",
+        "* For gamers, answering this question can help them know how many choices they have for each genre and help them find new genres"
       ],
       "metadata": {
         "id": "-OyKUpu7P-xc"
@@ -1744,7 +1744,7 @@
       "metadata": {
         "id": "1EvlcEZEQzwV"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1767,7 +1767,7 @@
         "id": "j9hhbIETcdXu",
         "outputId": "cb51195f-e922-4659-e5c9-b84de7e9288f"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1797,8 +1797,8 @@
       "source": [
         "As we can see from the plot:\n",
         "* The indie genre dominates all other genres while Nudity has the least amount of games.\n",
-        "* The top 3 genres which has the most number of games on Steam are Indie,  Action , Casual.\n",
-        "* The top 3 genres which has the least number of games on Steam are Nudity, Sexual Content and Gore."
+        "* The top 3 genres which have the most number of games on Steam are Indie,  Action and Casual.\n",
+        "* The top 3 genres which have the least number of games on Steam are Nudity, Sexual Content and Gore."
       ],
       "metadata": {
         "id": "UgLy-EEeh_ix"
@@ -1817,8 +1817,8 @@
       "cell_type": "markdown",
       "source": [
         "* Visualize the age requirement for games to see its trend and number of games by age group.\n",
-        "* For developers, answering this question will likely not help too much due to them already knowing which age group they want playing their games.\n",
-        "* For gamers, answering this question will provide an overview and show them how many choices they have for each games targeted age group."
+        "* For developers, answering this question will help them consider what content they should have in their game and which age group they want playing their games.\n",
+        "* For gamers, answering this question will provide an overview and show them how many choices they have for each game's targeted age group."
       ],
       "metadata": {
         "id": "XR2sfdwAofw4"
@@ -1844,7 +1844,7 @@
         "id": "D1EnB7aKqvXv",
         "outputId": "53b0e23e-ca82-48b9-a610-1ea4c673d215"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1872,7 +1872,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* We can see that an overwhelming of game has no age requirement.\n",
+        "* We can see that an overwhelming number of games have no age requirement.\n",
         "* This means most games are designed to be accessed by players of every age."
       ],
       "metadata": {
@@ -1910,7 +1910,7 @@
         "id": "L5WbpNNduPh9",
         "outputId": "507b3d99-c9c3-4950-d948-1190167a5abc"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1938,7 +1938,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* We can see that games for 18 age group is the highest.\n",
+        "* We can see that games for the 18 age group are the highest.\n",
         "* Games for 16 and above are the significantly higher than the rest of the ages."
       ],
       "metadata": {
@@ -1969,7 +1969,7 @@
       "metadata": {
         "id": "mLlAqFHNxOps"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1995,7 +1995,7 @@
         "id": "Da-YnS8bxa4o",
         "outputId": "1709dd73-0175-4551-b5ec-022f8104e8dc"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2024,9 +2024,9 @@
       "cell_type": "markdown",
       "source": [
         "As we can see from the plot:\n",
-        "* Most games are made for any age group to play.\n",
+        "* Most games are made for the all age group to play.\n",
         "* The Adult age group has more games than the Teen age group.\n",
-        "* Teen age group has the least amount of games and therefore could be an age group that should be targeted by developers."
+        "* The Teen age group has the least amount of games and therefore could be an age group that should be targeted by developers."
       ],
       "metadata": {
         "id": "N-z8Wta-009Q"
@@ -2038,7 +2038,7 @@
         "id": "Y4HBUFZxBSmm"
       },
       "source": [
-        "#### **4. Which factors should the game developers focus on in order to make their games get more positive reviews, these factors include: price, system requirements or genre?**"
+        "#### **4. Which factors contribute to a game's positive reviews, these factors include: price, system requirements or genre?**"
       ]
     },
     {
@@ -2047,8 +2047,8 @@
         "id": "4Qmze3CfBSmm"
       },
       "source": [
-        "* Visualize the relationship between the price, system requirements, and genre of the game with the number of positive reviews\n",
-        "* For devlopers, answering this question will help them know what they should focus on to make their games more popular and get more positive reviews.\n",
+        "* Visualize the relationship between the price, system requirements, and genre of the game with the number of positive reviews.\n",
+        "* For developers, answering this question will help them know what they should focus on to make their games more popular and get more positive reviews.\n",
         "* For gamers, answering this question will give them a general guideline when choosing highly rated games.\n",
         "* To answer this question, we will analyze the relationship between the price, system requirements, and genre of the game with the number of positive reviews."
       ]
@@ -2074,7 +2074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2134,7 +2134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "-nnhCzszBSmo"
       },
@@ -2153,7 +2153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "7kdwjQ5-BSmo"
       },
@@ -2174,7 +2174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "r_CNbHUcBSmo"
       },
@@ -2199,7 +2199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2231,7 +2231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2263,7 +2263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2295,7 +2295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2367,13 +2367,13 @@
       },
       "source": [
         "Steam has a variety of game genres, some genres are more popular than others. To answer this question, we will analyze the distribution of the number of reviews of each genre in the dataset. The genre with the highest number of reviews is the most popular genre among Steam users.\\\n",
-        "* For gamers, answering this question will let them know which game genres are the most popular among Steam users in order to assist them choosing a game to play.\n",
+        "* For gamers, answering this question will let them know which game genres are the most popular among Steam users in order to assist them in choosing a game to play.\n",
         "* For developers, answering this question will give them an overview on which genres are highly received by the user base."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "v54Hqf6gBSms"
       },
@@ -2386,7 +2386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2436,8 +2436,8 @@
       },
       "source": [
         "As we can see from the plot:\n",
-        "* The most popular game genres among Steam users are Action, Adventure, Indie.\n",
-        "* The least popular games genres among Steam users are Game Development, Nudity and Sexual Content\n",
+        "* The top 3 most popular game genres among Steam users are Action, Adventure, Indie.\n",
+        "* The top 3 least popular games genres among Steam users are Game Development, Nudity and Sexual Content\n",
         "In conclusion, users should be able to decide which genres or try out new genres by examining this chart."
       ]
     },
@@ -2447,7 +2447,7 @@
         "id": "QN0jUE2mBSmt"
       },
       "source": [
-        "#### **6. How does the sentiment expressed in review comments correlate with the games' review scores and playtime?**"
+        "#### **6. How does the sentiment expressed in reviews correlate with the games' review scores and playtime?**"
       ]
     },
     {
@@ -2456,15 +2456,15 @@
         "id": "Vej1KZw2BSmt"
       },
       "source": [
-        "Each steam user can write a review comment expressing their sentiment about the game. Answering this question will help us know if the users wrote good comments, will that game have a high review score and playtime.\\\n",
+        "Each steam user can write a review comment expressing their sentiment about the game which will help us know if the users wrote good comments, will that game have a high review score and playtime.\\\n",
         "* For developers, answering this question will give them valuable information on what they need to do better or what they did that the players like and also see the trend of players playing their games.\n",
-        "* For gamers, answering this question will help see if a game's review is biased\n",
+        "* For gamers, answering this question will help see if a game's review is biased and should be trusted.\n",
         "* To answer this question, we will analyze the correlation between the sentiment expressed in review comments with quantitative metrics like review scores and playtime.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "id": "T20E2hIgBSmt"
       },
@@ -2475,7 +2475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "id": "fk-X7yUMBSmt"
       },
@@ -2487,7 +2487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2515,7 +2515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "id": "LmgQAtsIBSmt"
       },
@@ -2537,7 +2537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2588,7 +2588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "id": "VN8iO8zIBSmu"
       },
@@ -2600,7 +2600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "metadata": {
         "id": "p2_GjME-BSmu"
       },
@@ -2612,7 +2612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
         "id": "Hb019HnhBSmu"
       },
@@ -2625,7 +2625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "metadata": {
         "id": "bsxr3WUpBSmu"
       },
@@ -2638,7 +2638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2680,7 +2680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2721,7 +2721,7 @@
         "\n",
         "In conclusion, the sentiment expressed in review comments correlates positively with the games' review scores and playtime. The games with positive review comments have higher review scores and playtime.\n",
         "\n",
-        "This can help building the review sentiment analysis model to analyze the sentiment of the review comments and predict the review scores and playtime of the games."
+        "This can help build the review sentiment analysis model to analyze the sentiment of the review comments and predict the review scores and playtime of the games."
       ]
     }
   ],
